[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DxfTabbedBoxMaker"
description = 'A tabbed box cutout generator outputting to DXF'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-2.0-or-later"
keywords = []
authors = [
  { name = "Manuel Desbonnet", email = "manueld@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ezdxf",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/dxftabbedboxmaker#readme"
Issues = "https://github.com/unknown/dxftabbedboxmaker/issues"
Source = "https://github.com/unknown/dxftabbedboxmaker"

[project.scripts]
dxftabbedboxmaker = "dxftabbedboxmaker.cli:dxftabbedboxmaker"

[tool.hatch.version]
path = "dxftabbedboxmaker/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "tabbedboxmaker @ git+ssh://git@github.com/manuelmcd/TabbedBoxMaker",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=dxftabbedboxmaker --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "dxftabbedboxmaker/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
